# simple-diffusion

./: .gitignore  README.md  pyproject.toml
k_diffusion/: augmentation.py  config.py  evaluation.py  external.py  gns.py  layers.py  sampling.py  utils.py
k_diffusion/models/: image_v1.py
ldm/: util.py
ldm/models/: autoencoder.py
ldm/modules/: attention.py  ema.py
ldm_patched/contrib/: external.py  (+23 more)
logger/: __init__.py  init.py
modules/: cache.py  call_queue.py  cmd_args.py  codeformer_model.py  config_states.py  dat_model.py  deepbooru.py  deepbooru_model.py  errors.py  esrgan_model.py  extensions.py  extra_networks.py  extra_networks_hypernet.py  extras.py  face_restoration_utils.py  gfpgan_model.py  gitpython_hack.py  gradio_extensons.py  hashes.py  hat_model.py  images.py  img2img.py  import_hook.py  infotext_utils.py  infotext_versions.py  initialize.py  initialize_util.py  interrogate.py  launch_utils.py  logging_config.py  mac_specific.py  masking.py  memmon.py  modelloader.py  ngrok.py  options.py  paths.py  paths_internal.py  postprocessing.py  processing.py  (+73 more)
modules_forge/: config.py  controlnet.py  cuda_malloc.py  diffusers_patcher.py  forge_alter_samplers.py  forge_clip.py  forge_loader.py  forge_sampler.py  forge_util.py  forge_version.py  gradio_compile.py  initialization.py  main_thread.py  ops.py  patch_basic.py  shared.py  stream.py  supported_controlnet.py  supported_preprocessor.py  unet_patcher.py
patchers/: reference.py
sgm/: lr_scheduler.py  util.py
simplediffusion/: __init__.py  hook.py  processing.py  prompt_parser.py
(+186 files in other folders)
