[tool.poetry]
name = "stablediffusion"
version = "0.1.0"
description = ""
authors = ["Jianqi Pan <jannchie@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
diffusers = "^0.28.2"
einops = "^0.8.0"
lark = "^1.1.9"
opencv-python = "^4.10.0.82"
piexif = "^1.1.3"
python = "3.10.6"
safetensors = "^0.4.3"
torch = { version = "*", source = "pytorch" }
torchvision = { version = "*", source = "pytorch" }
transformers = "4.30.2"
spandrel = "^0.3.4"
rich = "^13.7.1"
omegaconf = "^2.3.0"
open-clip-torch = "^2.24.0"
kornia = "^0.7.2"
pytorch-lightning = "^2.2.5"
tomesd = "^0.1.3"
diskcache = "^5.6.3"
blendmodes = "^2024.1.1"
scikit-image = "^0.23.2"
psutil = "^5.9.8"
jsonmerge = "^1.9.2"
torchdiffeq = "^0.2.4"
torchsde = "^0.2.6"
clean-fid = "^0.1.35"
clip-anytorch = "^2.6.0"
packaging = "^24.0"
setuptools = "69.5.1"
resize-right = "^0.0.2"
pytz = "^2024.1"
gitpython = "^3.1.43"
pydantic = "^2.7.3"
facexlib = "^0.3.0"

[[tool.poetry.source]]
name = "pypi"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 300
